# LocalBizIntelAI

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
apps/backend/: .pylintrc  Makefile  README.md  __main__.py  alembic.ini  pyproject.toml
apps/backend/api/: config.py  dependencies.py  logging_config.py  main.py  request_logging_middleware.py
apps/backend/api/routers/: __init__.py  admin.py  auth.py  billing.py  etl.py  health.py  insights.py  markets.py  me.py  personas.py  reports.py  tenants.py  workers.py
apps/backend/api/schemas/: admin.py  auth.py  billing.py  core.py  etl.py  insights.py  personas.py  reports.py
apps/backend/api/security/: jwt.py
apps/backend/jobs/: __init__.py  business_density_etl_job.py  demographics_etl_job.py  embedding_worker.py  ingestion_worker.py  labour_stats_etl_job.py  rebuild_embeddings_job.py  spending_etl_job.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20251122_163616_820dadebee68_initial_schema_for_core_market_reports_.py
apps/backend/models/: __init__.py  ai.py  billing.py  core.py  db.py  market.py  reports.py  system.py
apps/backend/pipelines/: __init__.py
apps/backend/repositories/: __init__.py  billing_repository.py  business_density_repository.py  data_freshness_repository.py  demographics_repository.py  etl_logs_repository.py  labour_stats_repository.py  opportunity_scores_repository.py  report_jobs_repository.py  spending_repository.py  tenant_repository.py  usage_repository.py  user_repository.py  vector_insights_repository.py
apps/backend/scripts/: db_init.py  seed.py
apps/backend/services/: __init__.py  admin_service.py  ai_engine_client.py  auth_service.py  billing_service.py  dependencies.py  embedding_client.py  etl_orchestration_service.py  insight_service.py  market_service.py  persona_service.py  pubsub_client.py  report_service.py  stripe_client.py  tenant_service.py
apps/backend/tests/: __init__.py  conftest.py  test_admin_datasets_and_report_jobs_endpoints.py  test_admin_etl_run_endpoint.py  test_admin_service_unit.py  test_admin_users_and_tenants_endpoints.py  test_api_smoke_wiring.py  test_auth_and_tenant_endpoints.py  test_auth_jwt_dependency.py  test_billing_checkout_session_endpoint.py  test_billing_plan_endpoint.py  test_billing_service_unit.py  test_business_density_etl_job_unit.py  test_config.py  test_cors_middleware.py  test_demographics_etl_job_unit.py  test_health.py  test_insight_service_market_summary.py  test_insight_service_opportunities.py  test_insights_market_summary_endpoint.py  test_insights_opportunities_endpoint.py  test_insights_opportunities_http_smoke.py  test_market_service_business_density.py  test_market_service_demographics.py  test_market_service_overview.py  test_markets_business_density_endpoint.py  test_markets_cities_endpoint.py  test_markets_demographics_endpoint.py  test_markets_overview_endpoint.py  test_persona_service_generate.py  test_personas_generate_endpoint.py  test_report_service_feasibility.py  test_report_service_list_get.py  test_reports_feasibility_endpoint.py  test_reports_list_and_get_endpoints.py  test_schemas_core.py  test_seed_script_smoke.py
apps/backend/tests/api/: __init__.py  test_admin_datasets_and_report_jobs_endpoints.py  test_admin_etl_run_endpoint.py  test_admin_users_and_tenants_endpoints.py  test_auth_and_tenant_endpoints.py  test_billing_checkout_session_endpoint.py  test_billing_plan_endpoint.py  (+11 more)
apps/backend/workflows/: __init__.py
(+16 files in other folders)
