[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localbizintel-backend"
version = "0.1.0"
description = "Backend service for LocalBizIntelAI built with FastAPI."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.5",
    "openai>=1.40.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "google-cloud-pubsub>=2.0.0",
]

[tool.setuptools.packages.find]
# Explicitly control which top-level packages are included, to avoid
# setuptools complaining about multiple packages in a flat layout.
where = ["."]
include = ["api*", "models*", "services*", "repositories*", "jobs*", "workflows*", "pipelines*", "migrations*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "black",
    "isort",
    "flake8",
    "mypy",
    "bandit",
    "pre-commit",
    "alembic",
]

# Optional observability integrations.
# These are loaded dynamically in `api.logging_config` when credentials are present.
observability = [
    "sentry-sdk>=2.0.0",
    "google-cloud-logging>=3.10.0",
    "watchtower>=3.0.1",
    "ddtrace>=2.0.0",
]

[tool.uvicorn]
factory = true
reload = true
host = "0.0.0.0"
port = 8000

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = "(^|/)(\\.venv|venv)(/|$)"

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv"]

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
mypy_path = "."
exclude = "(^|/)(\\.venv|venv)(/|$)"


